first modified files to commit

--- a/structure.html
+++ b/structure.html
@@ -23,12 +23,12 @@
   <!-- article -->
   <article>
   
-    <h1>Header H1 - Exercitation Ullamco</h1>
-    <h2>Header h2 - Exercitation Ullamco</h2>
-    <h3>Header H3 - Exercitation Ullamco</h3>
-    <h4>Header H4 - Exercitation Ullamco</h4>
-    <h5>Header H5 - Exercitation Ullamco</h5>
-    <h6>Header H6 - Exercitation Ullamco</h6>
+    <h1>Header H1 - This is a fancy header here</h1>
+    <h2>Header h2 - This is a fancy header here</h2>
+    <h3>Header H3 - This is a fancy header here</h3>
+    <h4>Header H4 - This is a fancy header here</h4>
+    <h5>Header H5 - This is a fancy header here</h5>
+    <h6>Header H6 - This is a fancy header here</h6>
 
     <section>
     <p><strong>General Therapy Group<br></strong>
