getting the hang of this now

--- a/structure.html
+++ b/structure.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset=utf-8>
     <title>Hi</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
   </head>
 
@@ -30,6 +31,11 @@
     <h5>Header H5 - This is a fancy header here</h5>
     <h6>Header H6 - This is a fancy header here</h6>
 
+    <div>
+      <img src="https://placehold.it/600x400">
+      <caption><small>This is a badass image</small></caption>
+    </div>
+
     <section>
     <p><strong>General Therapy Group<br></strong>
     <strong>Mondays 2:30 pm-4:00pm</strong><br>
@@ -42,6 +48,11 @@
     <strong>Mondays 2:30 pm-4:00pm</strong><br>
     <em>Leaders:&nbsp;Jodi Thomas, PsyD &amp; Divina Johnston, MS</em></p>
     <p>The General Therapy Group is an interpersonal process style therapy group that focuses on self-awareness and attention to one's interpersonal style.</p>
+    </section>
+
+    <section>
+    <p><strong>General Therapy Group<br></strong>
+    <strong>Mondays 2:30 pm-4:00pm</strong><br>
     </section>
 
     <section>
