--- a/structure.html
+++ b/structure.html
@@ -13,8 +13,9 @@
     <h1>HTML5 <i>News-Press</i></h1>
     <h2>All the news that's fit to link</h2>
     <ul id="nav">
-      <li><a href="#">This is a second mistake</a></li>
-      <li><a href="#">this is a third mistake</a></li>
+      <li><a href="#">National</a></li>
+      <li><a href="#">Metro area</a></li>
+      <li><a href="#">Sports</a></li>
       <li><a href="#">Arts &amp; Entertainment</a></li>
     </ul>
   </div>
